@@ -1,3 +1,9 @@
+2015-07-09  gepr  <gepr@tempusdictum.com>
+
+	* mexplot.r: New script to automate multi-trial Symptom vs. morbidity plots.  Might work for other variables in the looseDyn parameter set ... didn't test that though.
+
+	* agg.r (agg.r): Add more informative (longer) names to the experiment titles.
+
 2015-06-29  gepr  <gepr@tempusdictum.com>
 
 	* plot-cols.r: New script to plot any number of columns from a set of csv files.
